2007-09-20  Eric Hodel  <drbrain@segment7.net>

	* misc files: Tests pass on 1.9.
	* test/gemutilities.rb: Added Object#send! stub for 1.8.
	* test/test_open_uri.rb: Require gem_open_uri.rb to avoid warnings.
	* lib/rubygems/commands/sources_command.rb: Clarify `gem sources -c`
	and what `gem sources` does.  Patch by Hugh Sasse.

2007-09-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Make Gem::Platform a class.
	* lib/rubygems/specification.rb: Gem::Specification#validate returns
	true, non-Gem::Platform platforms are no longer allowed.
	* test/gemutilities.rb: 1.9 compatiblity fixes.
	* lib/rubygems/dependency_installer.rb: Work around a bug in URI.parse
	which misinterprets "C:/".  Patch #13537 submitted by Daniel Berger.
	* lib/rubygems/format.rb: Ensure file handles are closed.  Patch
	#13533 submitted by Daniel Berger.
	* test/test_gem_installer.rb: Win32 path fix.  Patch #13528 submitted
	by Daniel Berger.
	* test/gemutilities.rb: Make the platform be a win32 platform on
	win32.  Fixes confusion in generate_bin_symlink tests.  Patch #13529
	submitted by Daniel Berger.
	* test/test_gem_specification.rb: Sequel to above.  Patch
	#13535 submitted by Daniel Berger.
	* lib/rubygems/source_index.rb: Make the updating cache message more
	clear.  Patch #12778 submitted by Bil Kleb.
	* lib/rubygems/server.rb: Allow gem's rdoc-style.css to be used.
	Patch #13589 by Stephen Bannasch.
	* lib/rubygems/indexer.rb: Fail on missing builder gem only when
	trying to use the indexer.  Fixes bug #13939 by Bryan Stearns.
	* lib/rubygems/indexer/indexer.rb: Move Indexer up one level in
	nesting.
	* lib/rubygems/indexer/compressor.rb: Only used in
	Gem::Indexer::AbstractIndexBuilder subclasses, merged there.
	* lib/rubygems/command_aids.rb: Merged Gem::CommandAids into
	Gem::Command since that's the only place it gets used.
	* misc other files: mswin fixes.  Paired with Daniel Berger.

2007-08-24  Eric Hodel  <drbrain@segment7.net>
